Fix the masthead layout on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,8 +94,8 @@
     min-height: 350px;
   }
   .masthead h1.ui.header {
-    font-size: 2em;
-    margin-top: 1.5em;
+    font-size: 2.5em;
+    margin-top: 0.5em;
   }
   .masthead h2 {
     margin-top: 0.5em;
